extensions/stats/testdata/istio/metadata-exchange_with_wasm_filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: metadata-exchange
spec:
  filters:
  - filterConfig:
      configuration: envoy.wasm.metadata_exchange
      vm_config:
        code:
          filename: /metadata_exchange_1_3_1.wasm
        vm: envoy.wasm.vm.v8
    filterName: envoy.wasm
    filterType: HTTP
    insertPosition:
      index: FIRST
    listenerMatch:
      listenerProtocol: HTTP
      listenerType: SIDECAR_INBOUND
  - filterConfig:
      configuration: envoy.wasm.metadata_exchange
      vm_config:
        code:
          filename: /metadata_exchange_1_3_1.wasm
        vm: envoy.wasm.vm.v8
    filterName: envoy.wasm
    filterType: HTTP
    insertPosition:
      index: FIRST
    listenerMatch:
      listenerProtocol: HTTP
      listenerType: SIDECAR_OUTBOUND
  - filterConfig:
      configuration: envoy.wasm.metadata_exchange
      vm_config:
        code:
          filename: /metadata_exchange_1_3_1.wasm
        vm: envoy.wasm.vm.v8
    filterName: envoy.wasm
    filterType: HTTP
    insertPosition:
      index: FIRST
    listenerMatch:
      listenerProtocol: HTTP
      listenerType: GATEWAY
